feat: add change font

--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -21,4 +21,10 @@ $theme-fonts: (
     .font-#{$theme-font} {
         font-family: $font, sans-serif !important;
     }
+    .contact-text.font-#{$theme-font} {
+        font-family: $font, sans-serif !important;
+    }
+    .form-control.font-#{$theme-font} {
+        font-family: $font, sans-serif !important;
+    }
 }
