--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+      @apply py-2 px-4 bg-primary text-white font-semibold rounded-lg shadow-md hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary-light focus:ring-opacity-75;
+    }
+    .btn-secondary {
+      @apply py-2 px-4 bg-secondary text-white font-semibold rounded-lg shadow-md hover:bg-secondary-dark focus:outline-none focus:ring-2 focus:ring-secondary-light focus:ring-opacity-75;
+    }
+    .btn-accent {
+      @apply py-2 px-4 bg-accent text-white font-semibold rounded-lg shadow-md hover:bg-accent-dark focus:outline-none focus:ring-2 focus:ring-accent-light focus:ring-opacity-75;
+    }
+    .btn-primary-2 {
+      @apply py-2 px-4 bg-accent text-white font-semibold rounded-lg shadow-md hover:bg-accent-dark focus:outline-none focus:ring-2 focus:ring-accent-light focus:ring-opacity-75;
+    }
+  }
