--- a/src/style.css
+++ b/src/style.css
@@ -15,4 +15,8 @@
     .btn-primary-2 {
       @apply py-2 px-4 bg-accent text-white font-semibold rounded-lg shadow-md hover:bg-accent-dark focus:outline-none focus:ring-2 focus:ring-accent-light focus:ring-opacity-75;
     }
+
+    .focus-conatainer {
+      @apply shadow-xl border-2 rounded-lg m-2;
+    }
   }
