--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 5px !important;
+}
+
 .container-title-line {
   @apply relative 
   before:absolute
